--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "disableHostCheck": true,
+            "disableHostCheck": false,
             "browserTarget": "ecom:build"
           },
           "configurations": {
