--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-/server
 # compiled output
 /dist
 /tmp
@@ -44,3 +43,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+server/.env
+server/node_modules
