google tokens expiration debugged

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # backend files
 server/.env
 server/node_modules
+server/serviceAccountCreds.json
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 # compiled output
 /dist
