--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "ng-img-magnifier": "^1.2.1",
