--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
-    "express": "~4.16.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "googleapis": "^82.0.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.13.7",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "passport": "^0.5.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
