--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # backend files
-server/.env
-server/node_modules
-server/serviceAccountCreds.json
+server/
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 # compiled output
 /dist
