--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # backend files
-server/
+/server
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 # compiled output
 /dist
