--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # backend files
-/server
+server/.env
+server/node_modules
+server/serviceAccountCreds.json
+server/*
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 # compiled output
 /dist
