--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~12.2.9",
     "@angular/common": "~12.2.9",
     "@angular/compiler": "~12.2.9",
@@ -20,11 +21,13 @@
     "@angular/platform-browser-dynamic": "~12.2.9",
     "@angular/router": "~12.2.9",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "angularx-social-login": "^4.0.1",
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "ng-img-magnifier": "^1.2.1",
     "rxjs": "~6.6.0",
+    "save-dev": "0.0.1-security",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
